--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,6 +1,7 @@
 annotated-types==0.6.0
 anyio==4.3.0
 certifi==2024.2.2
+charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 dnspython==2.6.1
@@ -24,11 +25,13 @@ pydantic_core==2.16.3
 python-dotenv==1.0.1
 python-multipart==0.0.9
 PyYAML==6.0.1
+requests==2.31.0
 sniffio==1.3.1
 SQLAlchemy==2.0.28
 starlette==0.36.3
 typing_extensions==4.10.0
 ujson==5.9.0
+urllib3==2.2.1
 uvicorn==0.28.1
 watchfiles==0.21.0
 websockets==12.0
